# parcel

./: .travis.yml  LICENSE  Makefile  README.md  example-etc-parcel.yaml  parcel.cabal  parcel.yaml
src/: Main.hs  Parcel.hs
src/Parcel/: Config.hs  FPM.hs  Procfile.hs
test/: Spec.hs
test/Parcel/: ProcfileSpec.hs
