name:                parcel
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        LICENSE
author:              Kristian Glass
maintainer:          parcel@doismellburning.co.uk
-- copyright:           
category:            Development
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable parcel
    build-depends:
        base >=4.6 && <4.7
        , bytestring
        , directory
        , parcel
        , process==1.2.0.0
        , text
        , yaml
    default-language:
        Haskell2010
    ghc-options:
        -Wall -Werror -fno-warn-missing-signatures
    hs-source-dirs:
        src
    main-is:
        Main.hs
library
    build-depends:
        base >=4.6 && <4.7
        , bytestring
        , directory
        , process==1.2.0.0
        , text
        , yaml
    default-language:
        Haskell2010
    exposed-modules:
        Parcel
    ghc-options:
        -Wall -Werror -fno-warn-missing-signatures
    hs-source-dirs:
        src

test-suite spec
    build-depends:
        base >= 4.6 && <4.7
        , hspec
        , parcel
    default-language:
        Haskell2010
    ghc-options:
        -Wall -Werror -fno-warn-missing-signatures
    hs-source-dirs:
        src
        , test
    main-is:
        Spec.hs
    type:
        exitcode-stdio-1.0
